# ufo-desktop

./: .gitignore  CLAUDE.md  README.md  UFO_Desktop_App_Spec.md  autostart.py  briefing.py  delegate.py  icons.py  ollama_debug.md  pyproject.toml  telegram.py  ufo_app.py  views.py
add-info/: UFO_NANOBOT_HANDOFF.md  ufo_app.py
briefings/: 2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md
docs/: app_distribution_plan.md  startup_guide.md  symlink_path_management.md
